fixed center content overflow

--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -41,3 +41,8 @@
   color: white;
   text-align: center;
 }
+
+.rowMargin {
+  margin-right: 0;
+  margin-left: 0;
+}
